--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		<div class='gallery' id='chart'> </div>
 	
 		<script src='graph.js' type='text/javascript'> </script>
+		<a href="https://github.com/DarthBlair/Multidimensional-Data-using-D3">Repository</a>
 	</body>
 </html>
