--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 	<head>
   		<link href='graph.css' rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.v2.js"></script>
+		    <script type="text/javascript" src="lib/d3.layout.js"></script>
+
 	</head>
   
 	<body>
-		<div class='gallery' id='chart'> </div>
+		<!--<div class='gallery' id='chart'> </div>
 	
-		<script src='graph.js' type='text/javascript'> </script>
+		<script src='graph.js' type='text/javascript'> </script>-->
+		<div id="viz"></div>
+		<script src='tree.js' type='text/javascript'> </script>
 	</body>
 </html>
