Add Comment Feature(just graph) Dynamic Node adding

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 	<body>
 		<div class='gallery' id='chart'> </div>
-	
+		<input type="button" name="B1" value="Add Comment"  onclick="addPack()">
 		<script src='graph.js' type='text/javascript'> </script>
 	</body>
 </html>
