--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 	</head>
   
 	<body>
-		<!--<div class='gallery' id='chart'> </div>
+		<div class='gallery' id='chart'> </div>
 	
-		<script src='graph.js' type='text/javascript'> </script>-->
-		<div id="viz"></div>
-		<script src='tree.js' type='text/javascript'> </script>
+		<script src='graph.js' type='text/javascript'> </script>
 	</body>
 </html>
